# rocket-backend-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
mongo-init/: init.js
src/: main.rs
src/api/: api.rs  mod.rs
src/db/: db.rs
src/responses/: mod.rs  network_responses.rs  responses.rs  user_responses.rs
src/schema/: jwt_schema.rs  mod.rs  request_schema.rs  schema.rs  user_schema.rs
