[package]
name = "rocket-backend-template"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] } #our backend server
serde = { version = "1.0.219", features = ["derive"] } #for responses and json
serde_json = "1.0.140"
chrono = "0.4.40" #for thread safety
jsonwebtoken = "9.3.1" #jwt
dotenvy = "0.15.7" #environment vars
bcrypt = "0.17.0"
futures = "0.3.31"
mongodb = "3.2.3"
tokio = "1.44.1"
